# Home_work_35

./: .dockerignore  .env_exemple  Dockerfile  README.md  docker-compose.yaml  manage.py  pyproject.toml
.github/workflows/: build_and_push.yaml
Home_work_33/: asgi.py  models.py  settings.py  settings_pytest.py  urls.py  wsgi.py
bot/: admin.py  models.py  urls.py
bot/management/commands/: runbot.py
bot/migrations/: 0001_initial.py  0002_tguser_user_ud.py
bot/tg/: client.py  schemas.py
core/: admin.py  serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py
deploy/: docker-compose.yaml
goals/: admin.py  models.py  permissions.py  serializers.py  urls.py
goals/migrations/: 0001_initial.py  0002_alter_goal_options_alter_goal_title.py  0003_alter_goalcomment_options.py  0004_board_goalcategory_board_boardparticipant.py  0005_create_new_object.py  0006_alter_goalcategory_board.py  0007_alter_board_is_deleted_alter_board_title_and_more.py
goals/views/: boards.py  category.py  comments.py  goals.py
tests/: conftest.py  factories.py
tests/board_test/: test_board.py
tests/bot_test/: test_bot.py  test_bot_teacher.py  test_my_bot.py
tests/core_test/: test_signup.py
tests/goal_test/: test_goal.py  test_goal_list.py
